# ft_p

./: CMakeLists.txt  Makefile  a.out  client  ft_p.h  ft_p_client.h  ft_p_server.h  ft_strsplit_fn.c  server
client.dSYM/Contents/Resources/DWARF/: client
client_src/: client.c  ft_cd.c  ft_cmd.c  ft_cmd_chanle.c  ft_get.c  ft_lcd.c  ft_lls.c  ft_lmkdir.c  ft_lpwd.c  ft_ls.c  ft_mkdir.c  ft_p_client.h  ft_port.c  ft_put.c  ft_pwd.c  ft_quit.c  ft_receve_data.c  ft_recponce.c  ft_search_builtin.c  suport.c
libft/: Makefile  ft_strchr.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strreplace_char.c  ft_strsplit_fn.c  get_next_line.c  libft.h
server.dSYM/Contents/Resources/DWARF/: server
server_src/: ft_abs_path.c  ft_cd.c  ft_check_root.c  ft_cmd.c  ft_get.c  ft_get_pwd.c  ft_ls.c  ft_mkdir.c  ft_p_server.h  ft_port.c  ft_put.c  ft_pwd.c  ft_quit.c  ft_responce.c  server.c  server_loop.c  suport.c
